Time: 3 ms (75.86%), Space: 39.5 MB (37.80%) - LeetHub